ajout des projets perso

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </p>
             <div class="experience-cards-title">
                 <h1>Mon expérience</h1>
-                <h2>C'est le moment de vous parler de mon expérience et de certains projet que j'ai eu à réaliser.</h2>
+                <h2>Moment venu de vous parler de mon expérience professionnelle</h2>
             </div>
             <div class="experience-cards-container">
                 <!-- <div class="experience-cards-container-card">
@@ -351,8 +351,9 @@
                         <h3>Decembre 2021 • Janvier 2022</h3>
                         <p class="experience-cards-container-card-container-description">
                             <b>Stagiaire en tant que Développeur Web</b>
-                            <p>LOHCE • Douala</p>
-                            <h4>À ce stage j'ai appris comment fonctionne un système MVC avec JavaScript et comment mieux structurer son code.</h4>
+                        <p>LOHCE • Douala</p>
+                        <h4>À ce stage j'ai appris comment fonctionne un système MVC avec JavaScript et comment mieux
+                            structurer son code.</h4>
                         </p>
                     </div>
                 </div>
@@ -371,13 +372,59 @@
                     </div>
                 </div>
             </div>
+            <div class="experience-cards-title">
+                <h1>Projets personnels</h1>
+                <h2>Ici je vous présente mes projets personnels que j'ai réalisé juste pour le fun 😁✨</h2>
+            </div>
+            <div class="experience-cards-project">
+                <a href="https://camer-djoss.vercel.app/" target="_blank">
+                    <img src="projets/camerdjoss.png" alt="camerdjoss">
+                </a>
+                <a href="https://mobile-club-home.vercel.app/" target="_blank">
+                    <img src="projets/mobileclub.png" alt="mobileclub">
+                </a>
+                <a href="https://space-doge.vercel.app/" target="_blank">
+                    <img src="projets/spacedoge.png" alt="spacedoge">
+                </a>
+                <a href="https://genuka-clone.vercel.app/" target="_blank">
+                    <img src="projets/genuka.png" alt="genuka">
+                </a>
+                <a href="http://la-battle.vercel.app/" target="_blank">
+                    <img src="projets/labattle.png" alt="labattle">
+                </a>
+                <a href="https://star-wars-lime.vercel.app/" target="_blank">
+                    <img src="projets/starwars.png" alt="starwars">
+                </a>
+                <a href="https://skillex-psi.vercel.app/" target="_blank">
+                    <img src="projets/skillex.png" alt="skillex">
+                </a>
+                <a href="https://lndev-musicplayer.vercel.app/" target="_blank">
+                    <img src="projets/musicplayer.png" alt="musicplayer">
+                </a>
+                <a href="https://space-tourism-ln-dev7.vercel.app/" target="_blank">
+                    <img src="projets/spacetourism.png" alt="spacetourism">
+                </a>
+                <a href="https://dokita.vercel.app/" target="_blank">
+                    <img src="projets/dokita.png" alt="dokita">
+                </a>
+                <a href="https://sharon-tega.vercel.app/" target="_blank">
+                    <img src="projets/sharontega.png" alt="sahrontega">
+                </a>
+                <a href="https://insure-lac.vercel.app/" target="_blank">
+                    <img src="projets/insure.png" alt="insure">
+                </a>  
+                <a href="https://loopsstudios.vercel.app/" target="_blank">
+                    <img src="projets/loopstudio.png" alt="loopstudio">
+                </a>  
+            </div>
             <div class="experience-cards-github">
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
             </div>
             <div class="experience-cards-formation-web">
                 <p> J'ai une formation YouTube en HTML5 et CSS3 que vous pouvez consulter.</p>
-                <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank" class="form-web">
+                <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank"
+                    class="form-web">
                     <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
                     <span>Consultez ma formation HTML5 CSS3</span>
                 </a>
