aout des profils freelance

--- a/index.html
+++ b/index.html
@@ -453,6 +453,11 @@
                         <button>GO !!!</button>
                     </a>
                 </div>
+                <h2>Mes profils freelance</h2>
+                <div class="other-freelance">
+                    <a href="https://www.fiverr.com/ln_dev7" target="_blank"><img src="img/fiverr.png" alt="fiverr"></a>
+                    <a href="https://www.malt.fr/profile/lndev" target="_blank"><img src="img/malt.png" alt="malt"></a>
+                </div>
                 <a href="https://drive.google.com/file/d/1tj6WwxPgAyW0Zic0zfXo5LKliPvxlxab/view?usp=drivesdk"
                     target="_blank" class="other-container-cv">TELECHARGER MON CV</a>
             </div>
@@ -479,7 +484,7 @@
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
-            <p> &copy; Codé par LN • 2021 - 2022 | Inspiré de <a href="https://gabrielthecode.com/"
+            <p> &copy; Codé par LN • Tout droits réservé • 2021 - 2022 | Inspiré de <a href="https://gabrielthecode.com/"
                     target="_blank">Gabriel The Code</a> </p>
         </div>
     </footer>
