ajout des remerciments

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             </div>
         </div>
     </div>
-
+    <p class="thanks">Un grand merci a <a href="https://grafikart.fr/" target="_blank">Grafikart</a> et a <a href="https://openclassrooms.com/fr/" target="_blank">Openclassrooms</a> pour mes connaissances acquises</p>
     <footer class="footer" id="footer">
         <div class="footer-container">
             <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
