ajout du projet : clone de twitter

--- a/index.html
+++ b/index.html
@@ -380,6 +380,9 @@
                 <a href="https://camer-djoss.vercel.app/" target="_blank">
                     <img src="projets/camerdjoss.png" alt="camerdjoss">
                 </a>
+                <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
+                    <img src="projets/twitter-clone.png" alt="camerdjoss">
+                </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
                     <img src="projets/mobileclub.png" alt="mobileclub">
                 </a>
