ajout du bouton DON

--- a/index.html
+++ b/index.html
@@ -500,6 +500,12 @@
         <ion-icon name="moon-outline"></ion-icon>
         <ion-icon name="sunny-outline"></ion-icon>
     </div>
+
+     <div class="don">
+         <a href="https://www.patreon.com/ln_dev7" target="_blank">
+             <img src="img/patreon.png" alt="patreon">
+         </a>
+    </div>
 </body>
 
 </html>
