--- a/index.html
+++ b/index.html
@@ -48,6 +48,29 @@
         <div class="loader-bloc loader-right"></div>
     </div>
 
+    <div id="modal">
+        <div class="card-don">
+            <img class="don-close" src="img/close-circle-line.svg" alt="close">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                <path fill="none" d="M0 0h24v24H0z" />
+                <path
+                    d="M9.33 11.5h2.17A4.5 4.5 0 0 1 16 16H8.999L9 17h8v-1a5.578 5.578 0 0 0-.886-3H19a5 5 0 0 1 4.516 2.851C21.151 18.972 17.322 21 13 21c-2.761 0-5.1-.59-7-1.625L6 10.071A6.967 6.967 0 0 1 9.33 11.5zM4 9a1 1 0 0 1 .993.883L5 10V19a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-9a1 1 0 0 1 1-1h2zm9.646-5.425L14 3.93l.354-.354a2.5 2.5 0 1 1 3.535 3.536L14 11l-3.89-3.89a2.5 2.5 0 1 1 3.536-3.535z"
+                    fill="rgba(94,114,228,1)" />
+            </svg>
+            <h2>Vous avez deux manières de me soutenir :</h2>
+            <ul>
+                <li style="list-style: circle;">Vous pouvez devenir contributeur sur mon compte <a class="don-patreon"
+                        href="https://www.patreon.com/ln_dev7" target="_blank">Patreon</a> et profiter de mes vidéos <a
+                        class="don-youtube" href="https://www.youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg"
+                        target="_blank">YouTube</a> un
+                    jour à l'avance ainsi que du code source.</li>
+                <li style="list-style: circle;">Vous pouvez juste me faire un don via <a class="don-paypal"
+                        href="https://www.paypal.me/lndev7" target="_blank">PayPal.</a></li>
+            </ul>
+            <h3>MERCI 😊</h3>
+        </div>
+    </div>
+
     <nav class="navigation" id="navigation">
         <a href="index.html" class="navigation-logo">
             < LN />
@@ -415,10 +438,10 @@
                 </a>
                 <a href="https://insure-lac.vercel.app/" target="_blank">
                     <img src="projets/insure.png" alt="insure">
-                </a>  
+                </a>
                 <a href="https://loopsstudios.vercel.app/" target="_blank">
                     <img src="projets/loopstudio.png" alt="loopstudio">
-                </a>  
+                </a>
             </div>
             <div class="experience-cards-github">
                 <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
@@ -466,7 +489,8 @@
             </div>
         </div>
     </div>
-    <p class="thanks">Un grand merci a <a href="https://grafikart.fr/" target="_blank">Grafikart</a> et a <a href="https://openclassrooms.com/fr/" target="_blank">Openclassrooms</a> pour mes connaissances acquises</p>
+    <p class="thanks">Un grand merci a <a href="https://grafikart.fr/" target="_blank">Grafikart</a> et a <a
+            href="https://openclassrooms.com/fr/" target="_blank">Openclassrooms</a> pour mes connaissances acquises</p>
     <footer class="footer" id="footer">
         <div class="footer-container">
             <h2>Vous pouvez me suivre sur les réseaux sociaux</h2>
@@ -487,8 +511,8 @@
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
-            <p> &copy; Codé par LN • Tout droits réservé • 2021 - 2022 | Inspiré de <a href="https://gabrielthecode.com/"
-                    target="_blank">Gabriel The Code</a> </p>
+            <p> &copy; Codé par LN • Tout droits réservé • 2021 - 2022 | Inspiré de <a
+                    href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
         </div>
     </footer>
 
@@ -501,10 +525,15 @@
         <ion-icon name="sunny-outline"></ion-icon>
     </div>
 
-     <div class="don">
-         <a href="https://www.patreon.com/ln_dev7" target="_blank">
-             <img src="img/patreon.png" alt="patreon">
-         </a>
+    <div class="don">
+        <div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                <path fill="none" d="M0 0h24v24H0z" />
+                <path
+                    d="M5 9a1 1 0 0 1 1 1 6.97 6.97 0 0 1 4.33 1.5h2.17c1.332 0 2.53.579 3.353 1.499L19 13a5 5 0 0 1 4.516 2.851C21.151 18.972 17.322 21 13 21c-2.79 0-5.15-.603-7.06-1.658A.998.998 0 0 1 5 20H2a1 1 0 0 1-1-1v-9a1 1 0 0 1 1-1h3zm1.001 3L6 17.021l.045.033C7.84 18.314 10.178 19 13 19c3.004 0 5.799-1.156 7.835-3.13l.133-.133-.12-.1a2.994 2.994 0 0 0-1.643-.63L19 15l-2.112-.001c.073.322.112.657.112 1.001v1H8v-2l6.79-.001-.034-.078a2.501 2.501 0 0 0-2.092-1.416L12.5 13.5H9.57A4.985 4.985 0 0 0 6.002 12zM4 11H3v7h1v-7zm9.646-7.425L14 3.93l.354-.354a2.5 2.5 0 1 1 3.535 3.536L14 11l-3.89-3.89a2.5 2.5 0 1 1 3.536-3.535zm-2.12 1.415a.5.5 0 0 0-.06.637l.058.069L14 8.17l2.476-2.474a.5.5 0 0 0 .058-.638l-.058-.07a.5.5 0 0 0-.638-.057l-.07.058-1.769 1.768-1.767-1.77-.068-.056a.5.5 0 0 0-.638.058z"
+                    fill="rgba(251,99,64,1)" />
+            </svg>
+        </div>
     </div>
 </body>
 
