--- a/index.html
+++ b/index.html
@@ -406,6 +406,9 @@
                 <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
                     <img src="projets/twitter-clone.png" alt="camerdjoss">
                 </a>
+                <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
+                    <img src="projets/pokedex.png" alt="pokedex">
+                </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
                     <img src="projets/mobileclub.png" alt="mobileclub">
                 </a>
@@ -462,14 +465,15 @@
         <div class="other-container">
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
-                <h2>J'ai eu à faire beaucoup de formation <a href="https://openclassrooms.com/fr/"
-                        target="_blank">OpenClassrooms</a> où j'ai acquis la majorité des bases de mes connaissances sur
+                <h2>J'ai eu à faire des formations sur <a href="https://openclassrooms.com/fr/"
+                        target="_blank">OpenClassrooms</a> et aussi sur <a href="https://www.udemy.com/" target="_blank">Udemy</a>  où j'ai acquis la majorité des bases de mes connaissances sur
                     le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
                 <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing"
                     target="_blank" class="oc-cert">
                     <img src="img/oc.png" alt="Certifications OpenClassrooms">
                     <span>Consultez mes certifications OpenClassrooms</span>
                 </a>
+                
             </div>
             <div class="other-container-contact">
                 <h1>Contactez moi</h1>
