ajout des formations Udemy

--- a/index.html
+++ b/index.html
@@ -409,6 +409,9 @@
                 <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
                     <img src="projets/pokedex.png" alt="pokedex">
                 </a>
+                <a href="https://app-expenses-delta.vercel.app/" target="_blank">
+                    <img src="projets/app-expenses.png" alt="app-expenses">
+                </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
                     <img src="projets/mobileclub.png" alt="mobileclub">
                 </a>
@@ -474,6 +477,10 @@
                     <span>Consultez mes certifications OpenClassrooms</span>
                 </a>
                 
+                <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank" class="oc-cert">
+                    <img src="img/udemy.jpg" alt="Certifications Udemy">
+                    <span>Consultez mes certifications Udemy</span>
+                </a>
             </div>
             <div class="other-container-contact">
                 <h1>Contactez moi</h1>
