--- a/index.html
+++ b/index.html
@@ -57,15 +57,10 @@
                     d="M9.33 11.5h2.17A4.5 4.5 0 0 1 16 16H8.999L9 17h8v-1a5.578 5.578 0 0 0-.886-3H19a5 5 0 0 1 4.516 2.851C21.151 18.972 17.322 21 13 21c-2.761 0-5.1-.59-7-1.625L6 10.071A6.967 6.967 0 0 1 9.33 11.5zM4 9a1 1 0 0 1 .993.883L5 10V19a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-9a1 1 0 0 1 1-1h2zm9.646-5.425L14 3.93l.354-.354a2.5 2.5 0 1 1 3.535 3.536L14 11l-3.89-3.89a2.5 2.5 0 1 1 3.536-3.535z"
                     fill="rgba(94,114,228,1)" />
             </svg>
-            <h2>Vous avez deux manières de me soutenir :</h2>
+            <h2>Voulez vous me soutenir ?</h2>
             <ul>
-                <li style="list-style: circle;">Vous pouvez devenir contributeur sur mon compte <a class="don-patreon"
-                        href="https://www.patreon.com/ln_dev7" target="_blank">Patreon</a> et profiter de mes vidéos <a
-                        class="don-youtube" href="https://www.youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg"
-                        target="_blank">YouTube</a> un
-                    jour à l'avance ainsi que du code source.</li>
-                <li style="list-style: circle;">Vous pouvez juste me faire un don via <a class="don-paypal"
-                        href="https://www.paypal.me/lndev7" target="_blank">PayPal.</a></li>
+                <li style="list-style: circle;">Faites moi un don via <a class="don-paypal"
+                        href="https://www.paypal.me/lndev7" target="_blank"><b>PayPal</b></a>.</li>
             </ul>
             <h3>MERCI 😊</h3>
         </div>
