modif couleur modal

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             </svg>
             <h2>Voulez vous me soutenir ?</h2>
             <ul>
-                <li style="list-style: circle;">Faites moi un don via <a class="don-paypal"
-                        href="https://www.paypal.me/lndev7" target="_blank"><b>PayPal</b></a>.</li>
+                <li style="list-style: circle; font-size: 20px;">Faites moi un don via <a class="don-paypal"
+                        href="https://www.paypal.me/lndev7" style="font-size: 20px;" target="_blank">PayPal</a>.</li>
             </ul>
             <h3>MERCI 😊</h3>
         </div>
