ajout de citation-generator

--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@
                 <a href="https://app-expenses-delta.vercel.app/" target="_blank">
                     <img src="projets/app-expenses.png" alt="app-expenses">
                 </a>
+                <a href="https://citation-generator.vercel.app/" target="_blank">
+                    <img src="projets/citation-generator.png" alt="citation-generator">
+                </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
                     <img src="projets/mobileclub.png" alt="mobileclub">
                 </a>
