--- a/index.html
+++ b/index.html
@@ -410,6 +410,9 @@
                 <a href="https://citation-generator.vercel.app/" target="_blank">
                     <img src="projets/citation-generator.png" alt="citation-generator">
                 </a>
+                <a href="https://fast-voitures.vercel.app/" target="_blank">
+                    <img src="projets/fast.png" alt="fast">
+                </a>
                 <a href="https://mobile-club-home.vercel.app/" target="_blank">
                     <img src="projets/mobileclub.png" alt="mobileclub">
                 </a>
