ajout app meteo

--- a/index.html
+++ b/index.html
@@ -413,8 +413,11 @@
                 <a href="https://fast-voitures.vercel.app/" target="_blank">
                     <img src="projets/fast.png" alt="fast">
                 </a>
-                <a href="https://mobile-club-home.vercel.app/" target="_blank">
-                    <img src="projets/mobileclub.png" alt="mobileclub">
+                <a href="https://genuka-clone.vercel.app/" target="_blank">
+                    <img src="projets/genuka.png" alt="genuka">
+                </a>
+                <a href="https://app-meteo.vercel.app/" target="_blank">
+                    <img src="projets/app-meteo.png" alt="app-meteo">
                 </a>
                 <a href="https://space-doge.vercel.app/" target="_blank">
                     <img src="projets/spacedoge.png" alt="spacedoge">
