ajout d'un projet et du cours sur vue

--- a/index.html
+++ b/index.html
@@ -407,6 +407,9 @@
                 <a href="https://app-expenses-delta.vercel.app/" target="_blank">
                     <img src="projets/app-expenses.png" alt="app-expenses">
                 </a>
+                <a href="https://overthesea.vercel.app/" target="_blank">
+                    <img src="projets/overthesia.png" alt="overthesia">
+                </a>
                 <a href="https://citation-generator.vercel.app/" target="_blank">
                     <img src="projets/citation-generator.png" alt="citation-generator">
                 </a>
@@ -451,11 +454,20 @@
                 </a>
             </div>
             <div class="experience-cards-github">
-                <p> Vous pouvez voir tout mes projets OpenSource sur mon github.</p>
+                <p> Vous pouvez voir tout mes autres side projets OpenSource sur mon github.</p>
                 <a href="https://github.com/ln-dev7" target="_blank"><button>OUVRIR MON GITHUB</button></a>
             </div>
             <div class="experience-cards-formation-web">
-                <p> J'ai une formation YouTube en HTML5 et CSS3 que vous pouvez consulter.</p>
+                <p> J'ai un cour sur VueJS que vous pouvez lire.</p>
+                <a href="https://ln-dev.notion.site/Apprendre-Vue2-c8423f6326f0415b934c2863c44a3b6c" target="_blank"
+                    class="form-web">
+                    <img src="img/vue-js.jpg" alt="COURS VUEJS">
+                    <span>Consultez mon cours sur VueJS</span>
+                </a>
+                <br>
+                <p> J'ai une formation sur ma chaine <a
+                            href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank" style="font-weight: bold;">Youtube</a> en
+                        HTML5 et CSS3 que vous pouvez consulter.</p>
                 <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank"
                     class="form-web">
                     <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
@@ -470,15 +482,17 @@
             <div class="other-container-certification">
                 <h1>Mes certifications</h1>
                 <h2>J'ai eu à faire des formations sur <a href="https://openclassrooms.com/fr/"
-                        target="_blank">OpenClassrooms</a> et aussi sur <a href="https://www.udemy.com/" target="_blank">Udemy</a>  où j'ai acquis la majorité des bases de mes connaissances sur
+                        target="_blank">OpenClassrooms</a> et aussi sur <a href="https://www.udemy.com/"
+                        target="_blank">Udemy</a> où j'ai acquis la majorité des bases de mes connaissances sur
                     le web. <i>Consultez les en cliquant sur l'image :)</i> </h2>
                 <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing"
                     target="_blank" class="oc-cert">
                     <img src="img/oc.png" alt="Certifications OpenClassrooms">
                     <span>Consultez mes certifications OpenClassrooms</span>
                 </a>
-                
-                <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank" class="oc-cert">
+
+                <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank"
+                    class="oc-cert">
                     <img src="img/udemy.jpg" alt="Certifications Udemy">
                     <span>Consultez mes certifications Udemy</span>
                 </a>
@@ -523,8 +537,10 @@
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
-            <p> &copy; Codé par LN • Tout droits réservé • 2021 - 2022 | Inspiré de <a
-                    href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a> </p>
+            <p> &copy; Codé par LN • Tout droits réservé • 2021 -
+                <script>document.write(new Date().getFullYear())</script> | Inspiré de <a
+                    href="https://gabrielthecode.com/" target="_blank">Gabriel The Code</a>
+            </p>
         </div>
     </footer>
 
