refactoring de la partie experience pro

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="Scripts/loader.js" defer></script>
     <script src="Scripts/toggleMode.js" defer></script>
     <script src="Scripts/nav.js" defer></script>
+    <script src="Scripts/experience.js" defer></script>
 </head>
 
 <body>
@@ -348,47 +349,130 @@
                 <h2>Moment venu de vous parler de mon expérience professionnelle</h2>
             </div>
             <div class="experience-cards-container">
-                <!-- <div class="experience-cards-container-card">
+                <div class="faq-card active active">
+                    <div class="question">
+                        <h3>TRAVAIL</h3>
+                        <img src="img/arrow-down.svg" alt="arrow-down">
+                    </div>
+                    <div class="answer">
+                        <!-- <div class="experience-cards-container-card">
                     <div class="experience-cards-container-card-img">
                         <a href="" target="_blank"><img src="img/winexam.svg" alt="WINEXAM" style="width: 300px;"></a>
                     </div>
                     <div class="experience-cards-container-card-container">
-                        <h3>Décembre 2021 • Janvier 2022</h3>
+                        <h3>FrontEnd Developer</h3>
                         <p class="experience-cards-container-card-container-description">
-                            <b>Développeur FrontEnd</b>
+                            <b>Décembre 2021 • Présent</b>
                             <p>WINEXAM • Remote</p>
-                            <h4>Mon but était de développer une interface UI de l'application en VUEJS.</h4>
+                            
                         </p>
+                    </div>
+                    <h4>Projet en équipe qui m'a permis de mieux travailler en équipe et aussi à améliorer ma connaissance sur le framework VueJS tout en communiquant avec un backend fait en Python.</h4>
+                </div> -->
+                        <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <img src="img/freelance.png" alt="FREELANCE">
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>FrontEnd Developer</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Juin 2021 • Présent</b>
+                                <p>Freelance • Douala - Remote</p>
+                                </p>
+                            </div>
+                            <h4>En tant que freelance j'ai réalisé des sites vitrine et aussi des interfaces web,
+                                que vous
+                                veriez sur mon <b><a href="github.com/ln-dev7" target="_blank">GitHUb</a></b>
+                            </h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-card active">
+                    <div class="question">
+                        <h3>STAGE</h3>
+                        <img src="img/arrow-down.svg" alt="arrow-down">
+                    </div>
+                    <div class="answer">
+                        <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.png"
+                                        alt="LaMater"></a>
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>Stagiaire FrontEnd Developer</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Mars 2022 • Mai 2022</b>
+                                <p>LA MATER • Remote</p>
+
+                                </p>
+                            </div>
+                            <h4>
+                                Dans ce stage j'ai développé dont le but principal était l' implémentation des
+                                templates
+                                pour les boutiques <b><a href="https://genuka.com/" target="_blank">Genuka</a></b> à
+                                travers
+                                leur API j'ai aussi appris à mieux utiliser git car il nous servait pour le travail
+                                en
+                                équipe.</h4>
+                        </div>
+                        <div class="line"></div>
+                        <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>Stagiaire FrontEnd Developer</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Decembre 2021</b>
+                                <p>LOHCE • Remote</p>
+
+                                </p>
+                            </div>
+                            <h4>Stage durant le quel j'ai appris à monter une architecture avant d' élaborer un projet.</h4>
+                        </div>
+
+                        <!-- <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>Stagiaire Lead Developer</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Avril 2022 • Juin 2022</b>
+                                <p>LOHCE • Remote</p>
+
+                                </p>
+                            </div>
+                            <h4>Bien qu'ayant commencé le stage avant, c'est pendant cette periode que j'ai acquis
+                                l'expérience de pouvoir
+                                diriger une équipe de développeur afin de savoir à qui confier une tâche.</h4>
+                        </div> -->
+                    </div>
+                </div>
+                <!-- <div class="faq-card active">
+                    <div class="question">
+                        <h3>BENEVOLAT</h3>
+                        <img src="img/arrow-down.svg" alt="arrow-down">
+                    </div>
+                    <div class="answer">
+                        <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card-img">
+                                <a href="https://afritechh.com/" target="_blank"><img src="img/afritechhub.png"
+                                        alt="AfritechHub" style="width: 300px;"></a>
+                            </div>
+                            <div class="experience-cards-container-card-container">
+                                <h3>Formateur Web</h3>
+                                <p class="experience-cards-container-card-container-description">
+                                    <b>Avril 2022</b>
+                                <p>AfritechHub • Douala</p>
+
+                                </p>
+                            </div>
+                            <h4>Durant deux semaines j'ai formé des élèves à devenir les apprentis dans le
+                                développement web notamment les bases de HTML5 CSS3 JavaScript.</h4>
+                        </div>
                     </div>
                 </div> -->
-                <div class="experience-cards-container-card">
-                    <div class="experience-cards-container-card-img">
-                        <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
-                    </div>
-                    <div class="experience-cards-container-card-container">
-                        <h3>Decembre 2021 • Janvier 2022</h3>
-                        <p class="experience-cards-container-card-container-description">
-                            <b>Stagiaire en tant que Développeur Web</b>
-                        <p>LOHCE • Douala</p>
-                        <h4>À ce stage j'ai appris comment fonctionne un système MVC avec JavaScript et comment mieux
-                            structurer son code.</h4>
-                        </p>
-                    </div>
-                </div>
-                <div class="experience-cards-container-card">
-                    <div class="experience-cards-container-card-img">
-                        <img src="img/freelance.jpg" alt="FREELANCE">
-                    </div>
-                    <div class="experience-cards-container-card-container">
-                        <h3>Juin 2021 • présent</h3>
-                        <p class="experience-cards-container-card-container-description">
-                            <b>Développeur FrontEnd</b>
-                        <p>Freelance • Douala - Remote</p>
-                        <h4>En tant que freelance j'ai réalisé des sites vitrine et aussi des interfaces web, que vous
-                            veriez sur mon <b><a href="github.com/ln-dev7" target="_blank">GitHUb</a></b></h4>
-                        </p>
-                    </div>
-                </div>
             </div>
             <div class="experience-cards-title">
                 <h1>Projets personnels</h1>
@@ -465,9 +549,9 @@
                     <span>Consultez mon cours sur VueJS</span>
                 </a>
                 <br>
-                <p> J'ai une formation sur ma chaine <a
-                            href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank" style="font-weight: bold;">Youtube</a> en
-                        HTML5 et CSS3 que vous pouvez consulter.</p>
+                <p> J'ai une formation sur ma chaine <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg"
+                        target="_blank" style="font-weight: bold;">Youtube</a> en
+                    HTML5 et CSS3 que vous pouvez consulter.</p>
                 <a href="https://youtube.com/playlist?list=PLSPOY060zfMnG2JJ3aqYIMKWYQYNVt881" target="_blank"
                     class="form-web">
                     <img src="img/formation-html5-css3.jpg" alt="FORMATION HTML5 CSS3">
