rectification des liens

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <div class="line"></div>
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
+                                <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Stagiaire FrontEnd Developer</h3>
@@ -433,7 +433,7 @@
 
                         <!-- <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="www.lohce.com" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
+                                <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.jpg" alt="LOHCE"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Stagiaire Lead Developer</h3>
