edit du texte sur le stage de genuka

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             </div>
                             <div class="experience-cards-container-card-description">
                                 <h4>
-                                    Dans ce stage j'ai développé dont le but principal était l' implémentation des
+                                    Le but principal était l' implémentation des
                                     templates
                                     pour les boutiques <b><a href="https://genuka.com/" target="_blank">Genuka</a></b> à
                                     travers
