re definition des roles

--- a/index.html
+++ b/index.html
@@ -324,16 +324,16 @@
                     <p>
                         Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration
                         pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les
-                        demandes des clients.
+                        demandes des clients et dans certains cas en communiquant avec des API.
                     </p>
                 </div>
-                <!-- <div class="services-cards-container-card">
-                    <ion-icon name="phone-portrait-outline" class="circle"></ion-icon>
-                    <h2>DEVELOPPEMENT MOBILE</h2>
+                <div class="services-cards-container-card">
+                    <ion-icon name="globe-outline" class="circle"></ion-icon>
+                    <h2>INTEGRATION MOBILE</h2>
                     <p>
-                        Je développe des interfaces pour des applications android avec precautions sur les bésoins du client.
+                        Je concois aussi des templates HTML / CSS / JS reutilisable dans vos applications  web.
                     </p>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
