update des skills

--- a/index.html
+++ b/index.html
@@ -277,19 +277,19 @@
                         <ion-icon name="logo-sass"></ion-icon>
                         <ion-icon name="logo-javascript"></ion-icon>
                         <span><img src="img/ts.png" alt="ts"></span>
-                        <ion-icon name="logo-angular"></ion-icon>
-                        <ion-icon name="logo-react"></ion-icon>
                         <span><img src="img/svelte.png" alt="svelte"></span>
                         <span><img src="img/vue.png" alt="svelte"></span>
+                        <span><img src="img/vuerouter.png" alt="vue-router"></span>
+                        <span><img src="img/vuex.png" alt="vue-x"></span>
                     </div>
                 </div>
-                <div class="skillest-cards-container-card">
+                <!-- <div class="skillest-cards-container-card">
                     <ion-icon name="bonfire" class="circle"></ion-icon>
                     <p>DEVELOPPEMENT BACKEND</p>
                     <div>
                         <span><img src="img/php.png" alt="php"></span>
                     </div>
-                </div>
+                </div> -->
                 <div class="skillest-cards-container-card">
                     <ion-icon name="laptop-outline" class="circle"></ion-icon>
                     <p>OUTILS</p>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="services-cards-container-card">
                     <ion-icon name="globe-outline" class="circle"></ion-icon>
-                    <h2>INTEGRATION MOBILE</h2>
+                    <h2>INTEGRATION WEB</h2>
                     <p>
                         Je concois aussi des templates HTML / CSS / JS reutilisable dans vos applications  web.
                     </p>
