re ajout de react aux skills

--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@
                         <span><img src="img/ts.png" alt="ts"></span>
                         <span><img src="img/svelte.png" alt="svelte"></span>
                         <span><img src="img/vue.png" alt="svelte"></span>
-                        <span><img src="img/vuerouter.png" alt="vue-router"></span>
-                        <span><img src="img/vuex.png" alt="vue-x"></span>
+                        <!-- <span><img src="img/vuerouter.png" alt="vue-router"></span>
+                        <span><img src="img/vuex.png" alt="vue-x"></span> -->
+                        <span><img src="img/react.png" alt="react"></span>
                     </div>
                 </div>
                 <!-- <div class="skillest-cards-container-card">
