ajout de mentor moi

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <ion-icon name="globe-outline" class="circle"></ion-icon>
                     <h2>INTEGRATION WEB</h2>
                     <p>
-                        Je concois aussi des templates HTML / CSS / JS reutilisable dans vos applications  web.
+                        Je concois aussi des templates HTML / CSS / JS reutilisable dans vos applications web.
                     </p>
                 </div>
             </div>
@@ -486,13 +486,13 @@
                         </div> -->
                     </div>
                 </div>
-                <!-- <div class="faq-card active">
+                <div class="faq-card active">
                     <div class="question">
                         <h3>BENEVOLAT</h3>
                         <img src="img/arrow-down.svg" alt="arrow-down">
                     </div>
                     <div class="answer">
-                        <div class="experience-cards-container-card">
+                        <!-- <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
                                 <a href="https://afritechh.com/" target="_blank"><img src="img/afritechhub.png"
                                         alt="AfritechHub" style="width: 300px;"></a>
@@ -505,19 +505,20 @@
 
                                 </p>
                             </div>
-                             <div class="experience-cards-container-card-description">
+                            <div class="experience-cards-container-card-description">
                                 <h4>Durant deux semaines j'ai formé des élèves à devenir les apprentis dans le
-                                développement web notamment les bases de HTML5 CSS3 JavaScript.</h4>
+                                    développement web notamment les bases de HTML5 CSS3 JavaScript.</h4>
                                 <div>
                                     <button>APPRENDE AUX DEBUTANTS</button>
                                 </div>
                             </div>
                         </div>
-                        <div class="line"></div>
+                        <div class="line"></div> -->
                         <div class="experience-cards-container-card">
                             <div class="experience-cards-container-card-img">
-                                <a href="https://mentor-moi.netlify.app/fr/mentors/623784765dada20004549229" target="_blank"><img src="img/mentor-moi.svg"
-                                        alt="Mentor Moi" style="width: 300px;"></a>
+                                <a href="https://mentor-moi.netlify.app/fr/mentors/623784765dada20004549229"
+                                    target="_blank"><img src="img/mentor-moi.svg" alt="Mentor Moi"
+                                        style="width: 300px;"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
                                 <h3>Mentor Dev Web</h3>
@@ -528,14 +529,15 @@
                                 </p>
                             </div>
                             <div class="experience-cards-container-card-description">
-                                <h4>Je fais du mentoring dans les bases du développement web quand j' ai un peu de temps libre. <br> J' ai a mon actif <strong>une personne</strong> mentoré. </h4>
+                                <h4>Je fais du mentoring dans les bases du développement web quand j' ai un peu de temps
+                                    libre. <br> J' ai a mon actif <strong>deux personne</strong> mentoré. </h4>
                                 <div>
                                     <button>GUIDER DES PERSONNES</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>  -->
+                </div>
             </div>
             <div class="experience-cards-title">
                 <h1>Projets personnels</h1>
