ajout de mentor moi

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                             </div>
                             <div class="experience-cards-container-card-description">
                                 <h4>Je fais du mentoring dans les bases du développement web quand j' ai un peu de temps
-                                    libre. <br> J' ai a mon actif <strong>deux personne</strong> mentoré. </h4>
+                                    libre. <br> J' ai a mon actif <strong>deux personnes</strong> mentoré. </h4>
                                 <div>
                                     <button>GUIDER DES PERSONNES</button>
                                 </div>
