mise a jour stage genuka

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                 </h4>
                                 <div>
                                     <button>HTML5</button> <button>CSS3</button> <button>SCSS</button>
-                                    <button>JAVASCRIPT</button> <button>TYPESCRIPT</button> <button>SVELTE JS</button>
+                                    <button>JAVASCRIPT</button> <button>SVELTE JS</button>
                                     <button>VUE JS</button> <button>GIT</button> <button>GITHUB</button>
                                 </div>
                             </div>
@@ -416,7 +416,7 @@
                                         alt="LaMater"></a>
                             </div>
                             <div class="experience-cards-container-card-container">
-                                <h3>Stagiaire FrontEnd Developer</h3>
+                                <h3>Stagiaire FrontEnd / Lead Developer</h3>
                                 <p class="experience-cards-container-card-container-description">
                                     <b>Mars 2022 • Mai 2022</b>
                                 <p>LA MATER • Remote</p>
@@ -429,12 +429,12 @@
                                     templates
                                     pour les boutiques <b><a href="https://genuka.com/" target="_blank">Genuka</a></b> à
                                     travers
-                                    leur API j'ai aussi appris à mieux utiliser git car il nous servait pour le travail
-                                    en
-                                    équipe.
-
+                                    leur API, J'ai aussi été a former une équipe de deux personnes pour l'
+                                    accomplissement de cette dite
+                                    tache.
                                 </h4>
-                                <div><button>SVELTE JS</button> <button>SCSS</button> <button>API</button>
+                                <div><button>SVELTE JS</button> <button>Vue js</button> <button>SCSS</button>
+                                    <button>API</button>
                                     <button>TRVAIL EN
                                         EQUIPE</button> <button>git</button> <button>github</button>
                                 </div>
